# aoc-2020

./: Cargo.toml  README.md
src/: first_day.rs  first_week.rs  fourth_day.rs  main.rs  second_day.rs  second_week.rs  third_day.rs
src/first_week/: fifth_day.rs  first_day.rs  fourth_day.rs  second_day.rs  seventh_day.rs  sixth_day.rs  third_day.rs
src/second_week/: first_day.rs  second_day.rs  third_day.rs
