[package]
name = "aoc-2020"
version = "0.1.0"
authors = ["Eric Puentes <eric.david2333@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.4.2"
validator = { version = "0.12", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
lazy_static = "1.4.0"
